--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-  <style>
-    @import url(/style/style.css);
-  </style>
+  <link rel="stylesheeet" href="/style/style.css">
   
  
 </head>
