--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-  <link rel="stylesheeet" href="/style/style.css">
+  <style>
+    @import url(style.css);
+  </style>
   
  
 </head>
