--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
   <div id="header">
-    <img src="/images/logo.svg" alt="log">
+    <img src="logo.svg" alt="log">
   </div>
   <div id="body">
     
     <div id="image">
-      <img src="/images/illustration-mockups.svg" alt="mockup">
+      <img src="illustration-mockups.svg" alt="mockup">
     </div>
     
     <div class="community">
@@ -36,9 +36,9 @@
   </div>
   
   <div id="footer">
-    <img src="/images/facbook.png" alt="facebook" class="footer">
-    <img src="/images/twitter-256.png" alt="twitter" class="footer">
-    <img src="/images/instagram-256.png" alt="instagram" class="footer">
+    <img src="facbook.png" alt="facebook" class="footer">
+    <img src="twitter-256.png" alt="twitter" class="footer">
+    <img src="instagram-256.png" alt="instagram" class="footer">
   
   </div>
 
